package ar.edu.davinci.dvds20221cg2.service;

import java.math.BigDecimal;

public interface EstadoPrendaStrategy {
	
	BigDecimal precioVenta(BigDecimal PrecioBase);

}
